--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,5 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: hello step
-        run: echo "welocome Githubactions"
+        run: |
+          echo "welocome Githubactions"
+          echo "Welcome to Saikiran WOrld"
     
