--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,18 +2,18 @@ name: hello world
 on: workflow_dispatch
 jobs:
   build:
-    runs-on: ubuntu-lastest
+    runs-on: ubuntu-latest
     steps:
       - name: Build step
         run: echo "A demo build"
   test:
-    runs-on: ubuntu-lastest
+    runs-on: ubuntu-latest
     steps:
       - name: Test phase
         run: echo "running the test echo..............................."
 
   delopy:
-    runs-on: ubuntu-lastest
+    runs-on: ubuntu-latest
     steps:
       - name: delopy
         run: echo "this is delopy"
