--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,12 +8,14 @@ jobs:
         run: echo "A demo build"
   test:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Test phase
         run: echo "running the test echo..............................."
 
   delopy:
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: delopy
         run: echo "this is delopy"
