--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,14 +1,16 @@
-name: hello world
+name: Github action
 on: 
   push:
     branches:
       - dev
 jobs:
-  build:
+  action-demo:
     runs-on: ubuntu-latest
     steps:
       - name: Build step
-        run: echo "A demo build,${{vars.MY_NAME}}"
+        uses: actions/checkout@v6
+      - name: print the index.html
+        run: cat index.html
  
 
   
