--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -2,7 +2,7 @@ name: Build & Deploy
 on:
   push:
     branches:
-      - dev
+      - main
   pull_request:
     types:
       - opened
@@ -17,7 +17,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref_name == 'dev'
+    if: github.event_name == 'push' && github.ref_name == 'main'
     steps:
       - name: delopy step
         run: echo "deploying the application"
