--- a/.github/workflows/if-with-function.yml
+++ b/.github/workflows/if-with-function.yml
@@ -8,26 +8,26 @@ on:
 jobs:
   qulity_checks:
     if: startsWith(github.ref_name,'dev') && github.event_name == 'push'
-    runs-on: unbuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: perform code qulity
         run: echo "performing quality checks on the code"
   dev_deploy:
     if: github.ref_name == 'dev' &&  github.event_name == 'push'
-    runs-on: unbuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: perform code qulity
         run: echo "deploying in the dev env`
   prod_depoly:
     if: github.ref_name == 'main' &&  github.event_name == 'push'
-    runs-on: unbuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: perform code qulity
         run: echo "deploying the pro env"
   success_notify:
     needs: ['qulity_checks','dev_deploy', 'prod_depoly']
     if: always() && !failure()
-    runs-on: unbuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: succes
         run: echo "''''''''''''''''''''''''''''''"
